# Folin

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
models/wake_words/: hey_folin_en_windows_v3_0_0.ppn
src/: config.py  main.py
src/core/: __init__.py  asr.py  cli.py  llm.py  tts.py
tests/: __init__.py  conftest.py  test_asr.py  test_edge_tts.py  test_folin_v1.py  test_llm.py  test_tts.py
tests/integration/: test_main_flow.py  test_performance.py  test_wake_asr.py
tests/unit/: test_asr_integration.py  test_error_handling.py  test_wake_detection.py
wake_words/: __init__.py  wake_detector.py
